--- a/WTO/Views/Partial/ManageAccess/User.cshtml
+++ b/WTO/Views/Partial/ManageAccess/User.cshtml
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12">
         <label class="table-heading">Users (@Model.TotalCount)</label>
-        <a href="#" class="btn btn-light-blue btn-padding pull-right" data-target="#AddUser" onclick="AddUserPopup();" data-toggle="modal">Add User</a>
+        <a href="#" class="btn btn-blue btn-padding pull-right" data-target="#AddUser" onclick="AddUserPopup();" data-toggle="modal">Add User</a>
         <div class="table-responsive nopaging notificationlist top-offset-20">
             <table class="table table-bordered">
                 <thead class="second-blackbackground">
