--- a/WTO/Views/Partial/ManageAccess/Country.cshtml
+++ b/WTO/Views/Partial/ManageAccess/Country.cshtml
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12">
         <label class="table-heading">Countries (@Model.TotalCount)</label>
-        <a href="#" class="btn btn-light-blue btn-padding pull-right" data-target="#AddCountry" onclick="AddCountryPopup();" data-toggle="modal">Add Country</a>
+        <a href="#" class="btn btn-blue btn-padding pull-right" data-target="#AddCountry" onclick="AddCountryPopup();" data-toggle="modal">Add Country</a>
         <div class="table-responsive nopaging notificationlist top-offset-20" st>
             <table class="table table-bordered">
                 <thead class="second-blackbackground">
