--- a/WTO/Views/Partial/ManageAccess/Template.cshtml
+++ b/WTO/Views/Partial/ManageAccess/Template.cshtml
@@ -4,11 +4,10 @@
 }
 <script src="~/contents/js/ckeditor/ckeditor.js" type="text/javascript"></script>
 <input id="hdnTemplateId" type="hidden" value="0" />
-<input id="hdnTemplateFieldsFor" type="hidden" />
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12">
         <label class="table-heading">Templates (@Model.Templates.Count)</label>
-        <a href="#" class="btn btn-light-blue btn-padding pull-right" data-target="#AddTemplate" data-toggle="modal" onclick="AddTemplatePopup()">Add Template</a>
+        <a href="#" class="btn btn-blue btn-padding pull-right" data-target="#AddTemplate" data-toggle="modal" onclick="AddTemplatePopup()">Add Template</a>
         <div class="table-responsive nopaging notificationlist top-offset-20" st>
             <table class="table table-bordered">
                 <thead class="second-blackbackground">
@@ -27,28 +26,28 @@
                         int i = 0;
                         foreach (var item in @Model.Templates)
                         {
-                    <tr>
-                        <td>@(i + 1)</td>
-                        <td>@item.TemplateType</td>
-                        <td>@item.TemplateFor</td>
-                        @if (@item.TemplateStatus)
+                            <tr>
+                                <td>@(i + 1)</td>
+                                <td>@item.TemplateType</td>
+                                <td>@item.TemplateFor</td>
+                                @if (@item.TemplateStatus)
                                 {
-                        <td>Active</td>
+                                    <td>Active</td>
                                 }
                                 else
                                 {
-                        <td>Inactive</td>
+                                    <td>Inactive</td>
                                 }
-                        <td class="text-center"><a href="#" onclick="EditTemplateData(@item.TemplateId);"><span class="glyphicon glyphicon-edit"></span></a></td>
-                        <td class="text-center"><a href="#" onclick="Confirm('Delete','Do you want to delete the template?','Yes', 'No', 'DeleteTemplate(@item.TemplateId)');"><span class="glyphicon glyphicon-trash"></span></a></td>
-                    </tr>
+                                <td class="text-center"><a href="#" onclick="EditTemplate(@item.TemplateId);"><span class="glyphicon glyphicon-edit"></span></a></td>
+                                <td class="text-center"><a href="#" onclick="Confirm('Delete','Do you want to delete the template?','Yes', 'No', 'DeleteTemplate(@item.TemplateId)');"><span class="glyphicon glyphicon-trash"></span></a></td>
+                            </tr>
                         }
                     }
                     else
                     {
-                    <tr>
-                        <td colspan="6">No Record Found ...</td>
-                    </tr>
+                        <tr>
+                            <td colspan="6">No Record Found ...</td>
+                        </tr>
                     }
                 </tbody>
             </table>
@@ -78,7 +77,7 @@
                                 <div class="form-group">
                                     <label class="control-label col-sm-3">Template Type<sup class="mandetory">*</sup>:</label>
                                     <div class="col-sm-9">
-                                        <select id="ddlTemplateType" class="form-control" onchange="ShowHideSubject(this);">
+                                        <select id="ddlTemplateType" class="form-control">
                                             <option value="">--Select Template Type--</option>
                                             <option value="Mail">Mail</option>
                                             <option value="SMS">SMS</option>
@@ -115,8 +114,8 @@
                                     <div class="col-sm-9">
                                         <select class="form-control" id="ddlTemplateStatus">
                                             <option value="-1">---Select Status---</option>
-                                            <option value="true">Active</option>
-                                            <option value="false">Inactive</option>
+                                            <option value="1">Active</option>
+                                            <option value="0">Inactive</option>
                                         </select>
                                     </div>
                                 </div>
