--- a/WTO/Views/WTO/AddNotification.cshtml
+++ b/WTO/Views/WTO/AddNotification.cshtml
@@ -5,6 +5,7 @@
 }
 <link href="~/contents/css/css/bootstrap-combobox.css" rel="stylesheet" />
 <script src="~/contents/js/bootstrap-combobox.js"></script>
+<script src="~/contents/js/ckeditor/ckeditor.js" type="text/javascript"></script>
 <script src="~/JQuery/AddUpdateNotification.js?v=4"></script>
 <!-- body section start -->
 @Html.Hidden("hdnUserId", "1")
@@ -43,7 +44,7 @@
                                                 @*<div class="row">*@
                                                 <div class="col-xs-12 col-sm-12 col-md-12 whitebackground padding-bottom-10 full-border">
                                                     <div class="row top-offset-20">
-                                                        <div class="col-xs-12 col-sm-12 col-md-12">
+                                                        <div class="col-xs-12 col-sm-12 col-md-6 adduploadbutton">
                                                             @if (Model.NotificationAttachment == null)
                                                             {
                                                                 <div class="fileinput fileinput-new pull-right" data-provides="fileinput">
@@ -74,7 +75,7 @@
                                                         <div class="col-xs-12 col-sm-4 col-md-3">
                                                             <p class="wto-label-bold">Notification Type<sup class="mandetory">*</sup> <span class="pull-right">:</span></p>
                                                         </div>
-                                                        <div class="col-xs-12 col-sm-8 col-md-9">
+                                                        <div class="col-xs-12 col-sm-8 col-md-3">
                                                             <p class="wto-label-bold" id="NotificationTypeId">
                                                                 <b>
                                                                     @if (@Model.NotificationType != null && (Convert.ToString(@Model.NotificationType) == "1" || Convert.ToString(@Model.NotificationType) == "3"))
@@ -97,6 +98,7 @@
                                                             </p>
                                                         </div>
                                                     </div>
+
                                                     <div class="row top-offset-10">
                                                         <div class="col-xs-12 col-sm-4 col-md-3">
                                                             <p class="wto-label-bold">Notification Number<sup class="mandetory">*</sup> <span class="pull-right">:</span></p>
@@ -601,6 +603,7 @@
 <!-- body section End -->
 <!-- select HSCodes modal popup start -->
 <!-- Modal -->
+
 <div class="modal fade selecthrmodal" id="selecthr" role="dialog" data-backdrop="static" data-keyboard="false">
     <div class="modal-dialog modal-lg selecthrdialog">
         <!-- Modal content-->
@@ -642,20 +645,20 @@
                                 <div class="input-group">
                                     <input type="text" id="HSCodeSearchTxt" class="form-control selecthrsearchtextbox" placeholder="HSCode/Description">
                                     <span class="input-group-btn">
-                                        <button id="searchhscodebtn" class="btn btn-blue" type="button" onclick="SearchHSCode();">Search</button>
+                                        <button id="searchhscodebtn" class="btn sky-blue" type="button" onclick="SearchHSCode();">Search <span class="glyphicon glyphicon-search"></span></button>
                                     </span>
                                 </div>
                             </div>
                             <div class="col-xs-12 col-sm-2 col-md-2">
-                                <a class="btn btn-red" onclick="clearSearchtxt();">Clear</a>
+                                <a class="btn btn-dark-red" onclick="clearSearchtxt();">Clear <span class="glyphicon glyphicon-remove"></span></a>
                             </div>
                             <div class="col-xs-12 col-sm-4 col-md-4 ">
                                 <div class="row">
                                     <div class="col-xs-6 col-sm-6 col-md-6">
-                                        <a class="btn btn-light-blue btn-block" onclick="SaveHSCode();">Save</a>
+                                        <a class="btn btn-dark-green btn-block" onclick="SaveHSCode();"><img src="~/contents/img/save.png" /> Save</a>
                                     </div>
                                     <div class="col-xs-6 col-sm-6 col-md-6">
-                                        <a class="btn btn-red btn-block" data-dismiss="modal">Close</a>
+                                        <a class="btn btn-red btn-block" data-dismiss="modal">Close <span class="glyphicon glyphicon-remove"></span></a>
                                     </div>
                                 </div>
                             </div>
@@ -721,7 +724,7 @@
                                 <div class="input-group">
                                     <input id="txtSearchStakeHolder" type="text" class="form-control selecthrsearchtextbox" placeholder="Search Stakeholder by Name or HS Code" ng-model="search">
                                     <span class="input-group-btn">
-                                        <button class="btn btn-blue" type="button" ng-click="searchstakeholder()">Search</button>
+                                        <button class="btn btn-blue" type="button" ng-click="searchstakeholder()">Search <span class="glyphicon glyphicon-search"></span></button>
                                     </span>
                                 </div>
                             </div>
@@ -775,8 +778,8 @@
                             <div class="col-xs-12 col-sm-12 col-md-12 bottom-offset-20">
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-12 col-md-12">
-                                        <a class="btn btn-red  pull-right" data-dismiss="modal">Close</a>
-                                        <a class="btn btn-light-blue pull-right" style="margin-right:15px;" onclick="SaveStakeholder()">Save</a>
+                                        <a class="btn btn-red  pull-right" data-dismiss="modal">Close <span class="glyphicon glyphicon-remove"></span></a>
+                                        <a class="btn btn-dark-green pull-right" style="margin-right:15px;" onclick="SaveStakeholder()"><img src="~/contents/img/save.png" /> Save</a>
                                     </div>
                                 </div>
                             </div>
@@ -876,8 +879,8 @@
                                     <div class="col-xs-12 col-sm-6 col-md-6">
                                     </div>
                                     <div class="col-xs-12 col-sm-6 col-md-6">
-                                        <a data-dismiss="modal" class="btn btn-red btn-padding pull-right left-offset-10">Close</a>
-                                        <a class="btn btn-light-blue btn-padding pull-right" onclick="SendmailToStakeholders();">Send</a>
+                                        <a data-dismiss="modal" class="btn btn-red btn-padding pull-right left-offset-10">Close <span class="glyphicon glyphicon-remove"></a>
+                                        <a class="btn btn-dark-green btn-padding pull-right" onclick="SendmailToStakeholders();">Send</a>
                                     </div>
                                 </div>
                             </div>
@@ -959,7 +962,13 @@
 <!-- Sent mail Pop-Up End -->
 <!-- mail Count Pop-Up Start -->
 
-<div class="modal fade selecthrmodal" id="mailcount" role="dialog">
+<div class="modal fade selecthrmodal" id="MailConversationPopUp" role="dialog">
+
+    @{ Html.RenderAction("GetStakeholderConversation", "AddNotification", new { NotificationId = @Model.NotificationId, StakeholderId = 2 }); }
+
+</div>
+
+@*<div class="modal fade selecthrmodal" id="mailcount" role="dialog">
     <div class="modal-dialog modal-lg selecthrdialog">
         <div class="modal-content selecthrcontent">
             <div class="modal-header selecthrheader">
@@ -1017,7 +1026,7 @@
                                                             <span>20-december-2018</span><span class="left-offset-20">05:41PM</span>
                                                             <span class="left-offset-20">Lorem ipsum dolor sit amet..</span>
                                                             <span class="left-offset-20 attacmenticon glyphicon glyphicon-paperclip"></span>
-                                                            <span class="left-offset-20 shareback"><img src="~/contents/img/shareback.png" alt="shareback" style="margin-top:-4px;" /></span>
+                                                            <span class="left-offset-20 shareback glyphicon glyphicon-share-alt rotate"></span>
                                                         </a>
                                                     </h4>
                                                 </div>
@@ -1085,10 +1094,11 @@
             </div>
         </div>
     </div>
-</div>
+</div>*@
 
 <!--mail Count Pop-Up End -->
 <!-- Mail to enqirydesk Popup start -->
+
 <div class="modal fade selecthrmodal" id="mailtoenquirydesk" role="dialog">
     <div class="modal-dialog modal-lg selecthrdialog">
         <div class="modal-content selecthrcontent">
@@ -1131,7 +1141,7 @@
                                             <p class="wto-label-normal"><b>Body</b> <span class="pull-right">:</span></p>
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-10">
-                                            <textarea class="form-control whitebackground" id="txtMailToEnqMailBody" cols="30" rows="6"></textarea>
+                                            <textarea class="form-control whitebackground RfpEditor" id="txtMailToEnqMailBody" cols="30" rows="6"></textarea>
                                         </div>
                                     </div>
                                 </div>
@@ -1155,6 +1165,7 @@
 
 <!-- Mail to enqirydesk Popup End -->
 <!-- Upload Modal HTML -->
+
 <div id="UploadDocumentModal" class="modal fade" data-backdrop="static" data-keyboard="false">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -1184,3 +1195,20 @@
         </div>
     </div>
 </div>
+
+<script>
+    $(document).ready(function () {
+        var config = {
+            // Referencing the new plugin
+            toolbar: [
+                    { name: 'clipboard', items: ['Undo', 'Redo'] },
+                    { name: 'basicstyles', items: ['Bold', 'Italic', 'Underline', 'Strike', 'Subscript', 'Superscript', '-', 'CopyFormatting', 'RemoveFormat'] },
+                    { name: 'paragraph', items: ['NumberedList', 'BulletedList', '-', 'JustifyLeft', 'JustifyCenter', 'JustifyRight', 'JustifyBlock'] },
+                    { name: 'links', items: ['Link', 'Unlink'] },
+                    { name: 'insert', items: ['Table'] },
+                    { name: 'styles', items: ['Format'] },
+            ],
+        };
+        CKEDITOR.replace(txtMailToEnqMailBody, config);
+    });
+</script>
