--- a/WTO/Views/WTO/WTODashboard.cshtml
+++ b/WTO/Views/WTO/WTODashboard.cshtml
@@ -6,114 +6,139 @@
 }
 
 <!-- body section start -->
-<div class="container-fluid">
-    <div class="padding-bottom-40">
-        <div class="col-xs-12 col-sm-12 col-md-12">
-            <div class="col-xs-12 col-sm-12 col-md-12 top-offset-20 bottom-offset-20">
-                <div class="row">
-                    <h4 class="blue-color"><b>Dashboard</b></h4>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-12 lodingpanelDiv">
-                <div class='lodingPanel @(Model.PendingDiscussions.Sum(x => x.Total) > -1 ? "hidden" : "")'>
-                    <img src="~/contents/img/Dashboard_Loading.gif" />
-                </div>
-                <div class="col-xs-12 col-sm-12 col-md-12">
-                    <div class="col-xs-12 col-sm-12 col-md-12 bottom-offset-20">
-                        <div class="row darkBlueblackbackground padding-10">
-                            <div class="col-xs-12 col-sm-12 col-md-12">
-                                <h4 class="white-color">Pending Discussion (@Model.PendingDiscussions.Sum(x => x.Total))</h4>
-                            </div>
-                        </div>
+<div class="topbg">
+    <div class="container-fluid">
+        <div>
+            <div class="col-xs-12 col-sm-12 col-md-12">
+                <div class="col-xs-12 col-sm-12 col-md-12 top-offset-20 bottom-offset-20">
+                    <div class="row">
+                        <h4 class="white-color"><b>Dashboard</b></h4>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-12">
-                    <div class="col-xs-12 col-sm-12 col-md-12 bottom-offset-20">
-                        <div class="row darkgraybackground padding-10">
-                            @foreach (BusinessObjects.Notification.Count_Discussion item in Model.PendingDiscussions)
-                            {
-                                <div class="col-xs-12 col-sm-3 col-md-3 sm-20-bottom">
-                                    <a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 15, StatusId = @item.StatusId, StatusFor = "Discussion" })" class="smalldiv">
-                                        <div class="col-xs-12 col-sm-12 full-@item.CssColor-border whitebackground full">
-                                            <div class="col-xs-12 col-sm-12 col-md-12 top-offset-30 bottom-offset-30">
-                                                <div class="row">
-                                                    <div class="col-xs-6 col-sm-6 col-md-6 text-left">
+            </div>
+
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12 lodingpanelDiv" style="background:#efefef;">
+                    <div class='lodingPanel @(Model.PendingDiscussions.Sum(x => x.Total) > -1 ? "hidden" : "")'>
+                        <img src="~/contents/img/Dashboard_Loading.gif" />
+                    </div>
+                    @* <div class="col-xs-12 col-sm-12 col-md-12">
+                        <div class="col-xs-12 col-sm-12 col-md-12 bottom-offset-20">*@
+                    <div class="row darkBlueblackbackground padding-10 bottom-offset-20">
+                        <div class="col-xs-12 col-sm-12 col-md-12">
+                            <h4 class="white-color">Pending Discussion (@Model.PendingDiscussions.Sum(x => x.Total))</h4>
+                        </div>
+                    </div>
+                    @*</div>
+                        </div>*@
+                    <div class="col-xs-12 col-sm-12 col-md-12">
+                        <div class="col-xs-12 col-sm-12 col-md-12 bottom-offset-20">
+                            <div class="row padding-10">
+                                @foreach (BusinessObjects.Notification.Count_Discussion item in Model.PendingDiscussions)
+                                {
+                                    <div class="col-xs-12 col-sm-3 col-md-3 sm-20-bottom">
+                                        @if (@item.Total > 0)
+                                        {
+                                            <a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 15, StatusId = @item.StatusId, StatusFor = "Discussion" })" class="smalldiv">
+                                                <div class="col-xs-12 col-sm-12 whitebackground full rightbottom">
+                                                    <div class="text-center dashbaorddiscussionicon @item.CssColor rightbottom">
                                                         <img src="~/contents/img/@item.Icon" alt="document" />
                                                     </div>
-                                                    <div class="col-xs-6 col-sm-6 col-md-6 text-right">
-                                                        <h1>@item.Total</h1>
+                                                    <div class="col-xs-12 col-sm-12 col-md-12 top-offset-30 bottom-offset-30">
+                                                        <div class="row">
+                                                            <div class="col-xs-12 col-sm-12 col-md-12 text-right">
+                                                                <h1>@item.Total</h1>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="row">
+                                                        <div class="col-xs-12 col-sm-12 full-@item.CssColor text-center fixedbottom">
+                                                            <p>@item.Status</p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                        }
+                                        else
+                                        {
+                                            <div class="col-xs-12 col-sm-12 whitebackground full rightbottom">
+                                                <div class="text-center dashbaorddiscussionicon @item.CssColor rightbottom">
+                                                    <img src="~/contents/img/@item.Icon" alt="document" />
+                                                </div>
+                                                <div class="col-xs-12 col-sm-12 col-md-12 top-offset-30 bottom-offset-30">
+                                                    <div class="row">
+                                                        <div class="col-xs-12 col-sm-12 col-md-12 text-right">
+                                                            <h1>@item.Total</h1>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col-xs-12 col-sm-12 full-@item.CssColor text-center fixedbottom">
+                                                        <p>@item.Status</p>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="row">
-                                                <div class="col-xs-12 col-sm-12 full-@item.CssColor text-center fixedbottom">
-                                                    <p>@item.Status</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            }
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-12 lodingpanelDiv">
-                <div class='lodingPanel @(Model.PendingActions.Sum(x => x.Total) > -1 ? "hidden" : "")'>
-                    <img src="~/contents/img/Dashboard_Loading.gif" />
-                </div>
-                <div class="col-xs-12 col-sm-12 col-md-12">
-                    <div class="col-xs-12 col-sm-12 col-md-12 bottom-offset-20">
-                        <div class="row darkBlueblackbackground padding-10">
-                            <div class="col-xs-12 col-sm-12 col-md-12">
-                                <h4 class="white-color">Pending Action (@Model.PendingActions.Sum(x => x.Total))</h4>
+                                        }
+                                    </div>
+                                }
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-12">
-                    <div class="col-xs-12 col-sm-12 col-md-12 bottom-offset-20">
-                        <div class="row darkgraybackground padding-10">
-                            @foreach (BusinessObjects.Notification.Count_Action item in Model.PendingActions)
-                            {
-                                <div class="col-xs-12 col-sm-4 col-md-4 sm-20-bottom">
-                                    <a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 15, StatusId = @item.ActionId, StatusFor = "Action" })" cla class="smalldiv">
-                                        <div class="col-xs-12 col-sm-12 left-@item.CssColor-border whitebackground full">
-                                            <div class="col-xs-12 col-sm-12 col-md-12">
+            </div>
+
+            <div class="row" style="background:#efefef;">
+                <div class="col-xs-12 col-sm-12 col-md-12 lodingpanelDiv">
+                    <div class='lodingPanel @(Model.PendingActions.Sum(x => x.Total) > -1 ? "hidden" : "")'>
+                        <img src="~/contents/img/Dashboard_Loading.gif" />
+                    </div>
+                    @* <div class="col-xs-12 col-sm-12 col-md-12">
+                        <div class="col-xs-12 col-sm-12 col-md-12 bottom-offset-20">*@
+                    <div class="row darkBlueblackbackground padding-10 bottom-offset-20">
+                        <div class="col-xs-12 col-sm-12 col-md-12">
+                            <h4 class="white-color">Pending Action (@Model.PendingActions.Sum(x => x.Total))</h4>
+                        </div>
+                    </div>
+                    @* </div>
+                        </div>*@
+                    <div class="col-xs-12 col-sm-12 col-md-12">
+                        <div class="col-xs-12 col-sm-12 col-md-12 bottom-offset-20">
+                            <div class="row padding-10">
+                                @foreach (BusinessObjects.Notification.Count_Action item in Model.PendingActions)
+                                {
+                                    <div class="col-xs-12 col-sm-4 col-md-4 sm-20-bottom">
+                                        <a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 15, StatusId = @item.ActionId, StatusFor = "Action" })" cla class="smalldiv">
+                                            <div class="col-xs-12 col-sm-12 left-@item.CssColor-border whitebackground full rightbottom">
+                                                <div class="col-xs-12 col-sm-12 col-md-12">
+                                                    <div class="row">
+                                                        <div class="col-xs-6 col-sm-6 col-md-6 text-left">
+                                                            <p class="action left-offset-20">Overdue</p>
+                                                        </div>
+                                                        <div class="col-xs-6 col-sm-6 col-md-6 text-right">
+                                                            <p class="action right-offset-20">Total </p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="col-xs-12 col-sm-12 col-md-12 bottom-offset-30">
+                                                    <div class="row">
+                                                        <div class="col-xs-6 col-sm-6 col-md-6">
+                                                            <h1 class="red-color left-offset-30">@item.OverDue</h1>
+                                                        </div>
+                                                        <div class="col-xs-6 col-sm-6 col-md-6 text-right">
+                                                            <h1 class="right-offset-15">@item.Total</h1>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                                 <div class="row">
-                                                    <div class="col-xs-6 col-sm-6 col-md-6 text-left">
-                                                        <p class="action left-offset-20">Overdue</p>
-                                                    </div>
-                                                    <div class="col-xs-6 col-sm-6 col-md-6 text-right">
-                                                        <p class="action right-offset-20">Total </p>
+                                                    <div class="col-xs-12 col-sm-12 full-@item.CssColor-border text-center fixedbottom">
+                                                        <p class="action">@item.Action</p>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="col-xs-12 col-sm-12 col-md-12 bottom-offset-30">
-                                                <div class="row">
-                                                    <div class="col-xs-6 col-sm-6 col-md-6">
-                                                        <h1 class="red-color left-offset-30">@item.OverDue</h1>
-                                                    </div>
-                                                    <div class="col-xs-6 col-sm-6 col-md-6 text-right">
-                                                        <h1 class="right-offset-15">@item.Total</h1>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col-xs-12 col-sm-12 full-@item.CssColor-border text-center fixedbottom">
-                                                    <p class="action">@item.Action</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            }
+                                        </a>
+                                    </div>
+                                }
+                            </div>
                         </div>
                     </div>
                 </div>
